Modifica app html per passaggio di parametro MODE

--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_en.properties
@@ -50,10 +50,10 @@ metasupplierContactDeleted=Contact deleted
 errorDeletingMetasupplierContact=Error deleting contact
 selectContactType=Select contact type
 titleForm=Title
-name=name
 Name=Name
-surname=surname
+name=name
 Surname=Surname
+surname=surname
 Supplier=Supplier Code
 noMetasupplierFoundForUser=No metasupplier found for the current user
 BU=Businnes Unit
@@ -68,41 +68,28 @@ EKORG=Purchase Organization
 #XFLD: 
 uploadDoc=Upload document
 
-ERR_Type_missmatch = Errore nel caricamento del file solo formati di tipo xlxs,docx,pdf,txt sono permessi
-ERR_file_size = Attenzione il file caricato eccede i 5 Mb di dimensione
-OK_Upload=File caricato correttamente
-ERR_file_not_found=File non trovato
- 
+ERR_Type_missmatch = Only xlxs,docx,pdf,txt are permitted
+ERR_file_size = Warning file excede 5Mb size
+OK_Upload=File correctly uploaded
+ERR_file_not_found=File not found
 #XFLD: 
-fileName=Nome file
- 
-#XFLD: 
-attachments=Allegati
-attachmentsName=Nome file
+fileName=File name
+attachments=Attachments
 
  
 #XFLD: 
-street=via
+street=Street
  
 #XFLD: 
-cap=cap
+cap=Postal code
  
 #XFLD: 
-provincia=provincia
- 
-#XFLD: 
-datiAnagraficiFornitore=Dati anagrafici del meta fornitore
-titleModMetaSup = Modifica meta fornitore
- 
-#XFLD: 
-RicercaFornitore=Ricerca fornitore
- 
-#XFLD: 
-search=Ricerca
-reset=Reset
-supplierName = Nome fornitore
+provincia=Country
+datiAnagraficiFornitore= Meta Supplier data
+titleModMetaSup = Update meta supplier
+supplierName = Supplier name
 iva = P.iva
-
+reset=Reset
 MSG_Confirm_Modify_Metasupplier = Confirm metasupplier data modification?
 ERR_No_Supplier_Selected = No supplier selected
 noUploadPossible= No supplier found for this metasupplier impossible upload document.
