Modifica App HTML5 per passaggio parametri

--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
-title= 
-appTitle=
+title= Metasupplier management
+appTitle= Metasupplier management
 appDescription=
 codiceMetafornitore=Metasupplier code
 ragSocialeMetafornitore=Metasupplier business name
