--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
@@ -1,5 +1,5 @@
-title=
-appTitle=
+title=Gestione metafornitore
+appTitle=Gestione metafornitore
 appDescription=
 codiceMetafornitore=Codice metafornitore
 ragSocialeMetafornitore=Ragione sociale metafornitore
