Modifica app Metasupplier per gestione parametro + YAML corretto!

--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n.properties
@@ -1,5 +1,7 @@
 title= Metasupplier management
-appTitle= Metasupplier management
+appTitle=Metasupplier management
+appTitle_M=Supplier Reference Contacts
+appTitle_BM=Supplier Reference Contacts
 appDescription=
 codiceMetafornitore=Metasupplier code
 ragSocialeMetafornitore=Metasupplier business name
