--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
@@ -1,5 +1,7 @@
 title=Gestione metafornitore
 appTitle=Gestione metafornitore
+appTitle_M=Gestione contatti metafornitore
+appTitle_BM=Gestione contatti metafornitore
 appDescription=
 codiceMetafornitore=Codice metafornitore
 ragSocialeMetafornitore=Ragione sociale metafornitore
