--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/18n_en.properties
@@ -106,15 +106,14 @@ METASUP = Metasupplier
 supplier= Supplier
  
 #XFLD: 
-it_pregresso=Scaduto
+it_pregresso=Pregress
 
-NAME1 = Fornitore
- 
+
 #XFLD: 
-Tipo=Tipo
+Tipo=Type
+
 
 PianoConsegna= Piano di consegna
-Ordine = Ordine
+Ordine = Order
 Previsionale = Previsionale
-
-ZQUANTITA = Quantit\u00E0 residua
+ZQUANTITA = Quantity
