--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
@@ -1,33 +1,36 @@
-title=Title
-appTitle=Planning
+title=Titolo
+appTitle=Pianificazione
 appDescription=
 
 #XTXT: 
-loading=loading
+loading=caricamento
 
 #XTXT: 
-EBELN=Purch.Doc.
+EBELN=Doc. d'acquisto
 
 #XTXT: 
-EBELP=Item
+EBELP=Posizione
 
 #XTXT: 
-KONNR=Contract
+KONNR=Contratto
 
 #XTXT: 
-KTPNR=Contract. Pos
+KTPNR=Pos. Contratto
 
 #XTXT: 
-MATNR=Material
+MATNR=Materiale
 
 #XTXT: 
-TXZ01=Material Description
+TXZ01=Descrizione Materiale
 
 #XTXT: 
-LIFNR=Supplier
+LIFNRr=Fornitore
 
 #XTXT: 
-EKORG=Purchase Organization
+EKORG=Organizzazione acquisti
+
+#XTXT: 
+EKGRP=Gruppo acquisti
 
 #XTXT: 
 SchedMod=Schedule Mod.
@@ -57,10 +60,10 @@ OPENCLOSE=A/C
 WERKS=Plant
 
 #XTXT: 
-LWEDT=Last GR: date
+LWEDT=Ultima GR: data
 
 #XTXT: 
-LWEMG=Last GR: qty
+LWEMG=Ultima GR: qta
 
 #XTXT: 
 ABEFZ=Progr. GR
@@ -98,20 +101,18 @@ WEEK10=Week 10
 #XTXT: 
 WEEK11=Week 11
 
-#XTXT: 
-EKGRP=Purchases Group
+METASUP = Metafornitore
 
-METASUP = Metasupplier
+supplier= Fornitore
 
-supplier= Supplier
- 
 #XFLD: 
 it_pregresso=Scaduto
 
 NAME1 = Fornitore
- 
+
 #XFLD: 
 Tipo=Tipo
+
 
 PianoConsegna= Piano di consegna
 Ordine = Ordine
