PLANNING: Aggancio servizi

--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/18n_en.properties
@@ -117,3 +117,9 @@ PianoConsegna= Piano di consegna
 Ordine = Order
 Previsionale = Previsionale
 ZQUANTITA = Quantity
+
+titleMatnr = Search Materials
+materialDescr = Material Description
+materialCode = Material Code
+
+close = Close
