--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
@@ -119,3 +119,11 @@ Ordine = Ordine
 Previsionale = Previsionale
 
 ZQUANTITA = Quantit\u00E0 residua
+
+titleMatnr = Ricerca Materiali
+
+materialDescr = Descrizione Materiale
+
+materialCode = Codice Materiale
+
+close = Annulla
