NON CONFORMITA implementazione

--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n.properties
@@ -99,3 +99,4 @@ Tipologia=Tipologia
 #XTXT: 
 Title2=Cause Misure Interventi
 MSG_Confirm_Text=Are you sure you want to confirm?
+OK_MSG=Elaborato Correttamente
