--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_en.properties
@@ -97,3 +97,4 @@ Tipologia=Type
 #XTXT: 
 Title2=Causes - Measures - Interventions
 MSG_Confirm_Text=Are you sure you want to confirm?
+OK_MSG=correctly elaborated
