--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_it.properties
@@ -98,3 +98,4 @@ Tipologia=Tipologia
 #XTXT: 
 Title2=Cause Misure Interventi
 MSG_Confirm_Text=Sei sicuro di vole confermare le modifiche?
+OK_MSG=Elaborato Correttamente
