--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -378,6 +378,9 @@ PROG_CONFERMA=Progressivo Conferma
 #XTIT:
 ZENTRATA=Progressivo Ricevuto
 
+#XTIT:
+KTMNG=Quantità tot. ordine
+
 #XTXT: 
 CAT_CONS=Categoria consegna
 
