--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -378,6 +378,9 @@ PROG_CONFERMA=Progressive Confirm
 #XTIT:
 ZENTRATA=Progressive Received
 
+#XTIT:
+KTMNG=Total Quantity Order
+
 #XTXT: 
 CAT_CONS=Delivery category
  
