AUSPSUP_HTML5_SCHEDAGREE Modifiche view Conferme

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -300,6 +300,7 @@ ERR_Quant_Perc_Down_Single =  La somma delle quantit\u00E0 inserite supera la pe
 ERR_Price_Perc_Down = Position {0} price exceeds the percentage of lower deviation
 ERR_Price_DateB = Order {0} Value the Validity Start date
 ERR_Price_DateE = Order {0} Value the Validity End date
+ERR_Price_valB = Order {0} Unable to select a date befor than today
 ERR_Confirmation_In_Corso_Approvazione=Exist order for this position
 OK_Position_confirm=No error found for position
 Title_CatConf = Select Confirmation category
