--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -301,6 +301,7 @@ ERR_Quant_Perc_Down_Single =  Ordine {0} la somma delle quantit\u00E0 inserite s
 ERR_Confirmation_In_Corso_Approvazione=Esiste gi\u00E0 una conferma per la posizione selezionata.
 ERR_Price_DateB = Ordine {0} Valorizzare la data di Inizio Validit\u00E0
 ERR_Price_DateE = Ordine {0} Valorizzare la data di Fine Validit\u00E0
+ERR_Price_valB = Ordine {0} Impossibile selezionare una data precedente alla data di oggi
 MSG_Confirm_Position_Text=Sei sicuro di voler confermare le posizioni selezionate?
 OK_Position_confirm=Nessun errore riscontrato per la posizione.
 Title_CatConf = Selezionare la Categoria Conferma
