APRV SCHED AGREE: traduzioni ed implementazione

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -175,3 +175,5 @@ LIFNR=Codice fornitore
  
 #XFLD: 
 NAME1=Fornitore
+
+MSG_Confirm_Reject_Text = Sei sicuro di voler confermare/rifiutare le posizioni selezionate?
