APR SCHED AGREE

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
-title=Scheduling agreement - Quantity Confirmation
-appTitle=Scheduling agreement - Quantity Confirmation
+title=Scheduling agreement - Confirmation
+appTitle=Scheduling agreement - Confirmation
 appDescription=
  
 #XTXT: 
@@ -114,7 +114,7 @@ SYSID=System ID
 ERR_Export=No orders found to export
 
 #XMSG: 
-MessConf=Are you sure you want to confirm selected positions?
+MessConf=Are you sure you want to confirm price for selected positions?
 MessReject=Are you sure you want to reject selected positions?
 correctConfirmPositions = Positions correctly confirmed
 correctConfirmData = Data correctly elaborated
@@ -177,3 +177,5 @@ LIFNR=Supplier
 NAME1=Supplier Name
 
 MSG_Confirm_Reject_Text = Do you want to confirm this operation?
+
+AddNota=Add note (optional)
