--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -1,5 +1,5 @@
-title=Piandi di consegna - Approvazione Quantità
-appTitle=Piandi di consegna - Approvazione Quantità
+title=Piandi di consegna - Approvazione
+appTitle=Piandi di consegna - Approvazione
 appDescription=
  
 #XTXT: 
@@ -114,7 +114,7 @@ SYSID=System ID
 ERR_Export=Nessun dato da esportare
 
 #XMSG: 
-MessConf=Sei sicuro di voler confermare le posizioni selezionate?
+MessConf=Sei sicuro di voler confermare il prezzo per le posizioni selezionate?
 MessReject=Sei sicuro di voler rifiutare le posizioni selezionate?
 correctConfirmPositions =Posizioni confermate correttamente
 correctConfirmData =Dati elaborati correttamente
@@ -177,3 +177,5 @@ LIFNR=Codice fornitore
 NAME1=Fornitore
 
 MSG_Confirm_Reject_Text = Sei sicuro di voler confermare/rifiutare le posizioni selezionate?
+
+AddNota=Aggiungi nota per il rifiuto (non obbligatoria)
