APR SCHED AGREE: implementazione

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
@@ -1,5 +1,5 @@
-title=Scheduling agreement - Quantity 
-appTitle=Scheduling agreement - Quantity
+title=Scheduling agreement - Confirmation 
+appTitle=Scheduling agreement - Confirmation
 appDescription=
  
 #XTXT: 
@@ -178,3 +178,11 @@ NAME1=Supplier Name
 MSG_Confirm_Reject_Text = Do you want to conirm this operation?
 
 AddNota=Add note (optional)
+
+AddNota=Add note (optional)
+dataConferma=Delta confirm
+quantitaConferma=Qant confirm
+dataRichiesta=Data richiesta
+quantitaRichiesta=Quant richiesta
+deltaGG=Delta Day
+deltaQuantita=Delta Quant.
