--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -179,3 +179,9 @@ NAME1=Supplier Name
 MSG_Confirm_Reject_Text = Do you want to confirm this operation?
 
 AddNota=Add note (optional)
+dataConferma=Delta confirm
+quantitaConferma=Qant confirm
+dataRichiesta=Data richiesta
+quantitaRichiesta=Quant richiesta
+deltaGG=Delta Day
+deltaQuantita=Delta Quant.
