--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -179,3 +179,10 @@ NAME1=Fornitore
 MSG_Confirm_Reject_Text = Sei sicuro di voler confermare/rifiutare le posizioni selezionate?
 
 AddNota=Aggiungi nota per il rifiuto (non obbligatoria)
+
+dataConferma=Delta conferma
+quantitaConferma=Qant conferma
+dataRichiesta=Data richiesta
+quantitaRichiesta=Quant richiesta
+deltaGG=Delta GG
+deltaQuantita=Delta Quant.
