--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -377,6 +377,9 @@ PROG_RICHIESTO=Progressivo Richiesto
 PROG_CONFERMA=Progressivo Conferma
 
 #XTIT:
+QTA_CONFERMA=Quantità Confermata
+
+#XTIT:
 ZENTRATA=Progressivo Ricevuto
 
 #XTIT:
