--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -377,6 +377,9 @@ PROG_RICHIESTO=Progressive Required
 PROG_CONFERMA=Progressive Confirm
 
 #XTIT:
+QTA_CONFERMA=Quantity Confirm
+
+#XTIT:
 ZENTRATA=Progressive Received
 
 #XTIT:
