--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -24,7 +24,7 @@ searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
 positionNotConfirmable = Positions {0} are not confirmable
-allPositionNotConfirmable = All selected order positions can't be confirmed
+allPositionNotConfirmable = All selected order positions can not be confirmed
  
 #MESSAGES:
 noOrderFound = No orders found
