Sviluppi e modifiche nel file Condiviso - sort, agg.Videate, Modifica colonne

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
@@ -186,3 +186,4 @@ dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
 deltaGG=Delta Day
 deltaQuantita=Delta Quant.
+MSG_NO_TO_CONFIRM=No data found
