--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -186,3 +186,4 @@ dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
 deltaGG=Delta GG
 deltaQuantita=Delta Quant.
+MSG_NO_TO_CONFIRM=Nessuna dato trovato
