AUPSUP_HTML5_SCHEDAGREE - Modifica testi

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -368,7 +368,7 @@ KDATE=End date
 PRIMO_PERIODO=First Period
 
 #XTIT:
-SECONDO_PERIODO=Second Period
+SECONDO_PERIODO=Total Period
 
 #XTIT:
 PROG_RICHIESTO=Progressive Required
