--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -368,7 +368,7 @@ KDATE=Data Fine
 PRIMO_PERIODO=Primo Periodo
 
 #XTIT:
-SECONDO_PERIODO=Secondo Periodo
+SECONDO_PERIODO=Totale Periodo
 
 #XTIT:
 PROG_RICHIESTO=Progressivo Richiesto
