--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -377,13 +377,13 @@ PROG_RICHIESTO=Progressivo Richiesto
 PROG_CONFERMA=Progressivo Conferma
 
 #XTIT:
-QTA_CONFERMA=Quantità Confermata
+QTA_CONFERMA=Quantit\u00E0 Confermata
 
 #XTIT:
 ZENTRATA=Progressivo Ricevuto
 
 #XTIT:
-KTMNG=Quantità tot. ordine
+KTMNG=Quantit\u00E0 tot. ordine
 
 #XTXT: 
 CAT_CONS=Categoria consegna
@@ -403,3 +403,5 @@ ERR_insert_schedulations=Prego inserire almeno una schedulazione
 titleModMetaSup= Modifica anagrafica metafornitore
 ERR_no_schedulations=Non sono state inserite schedulazioni
 MSG_Confirm_Text=Sei sicuro di voler confermare le modifiche ?
+
+MENGE_RELEASE=Quantit\u00E0 rilasciata
