--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -410,3 +410,5 @@ titleModMetaSup= Update metasupplier data
 
 ERR_no_schedulations=No schedulations found
 MSG_Confirm_Text=Are you sure you want to confirm?
+
+MENGE_RELEASE=Quantity release
