APPR SCHED AGREE

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
-title=Scheduling agreement - Confirmation
-appTitle=Scheduling agreement - Confirmation
+title=Confirmation Approve
+appTitle=Confirmation Approve
 appDescription=
  
 #XTXT: 
@@ -180,9 +180,12 @@ MSG_Confirm_Reject_Text = Do you want to confirm this operation?
 
 AddNota=Add note (optional)
 dataConferma=Delta confirm
-quantitaConferma=Qant confirm
+quantitaConferma=Quant confirm
 dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
 deltaGG=Delta Day
 deltaQuantita=Delta Quant.
 MSG_NO_TO_CONFIRM=No data found
+
+advice = Advice
+advice_msg = Need Prob Mod Sched
