--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -1,5 +1,5 @@
-title=Piandi di consegna - Approvazione
-appTitle=Piandi di consegna - Approvazione
+title=Conferma approvazione
+appTitle=Conferma approvazione
 appDescription=
  
 #XTXT: 
@@ -181,9 +181,11 @@ MSG_Confirm_Reject_Text = Sei sicuro di voler confermare/rifiutare le posizioni 
 AddNota=Aggiungi nota per il rifiuto (non obbligatoria)
 
 dataConferma=Delta conferma
-quantitaConferma=Qant conferma
+quantitaConferma=Quant conferma
 dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
 deltaGG=Delta GG
 deltaQuantita=Delta Quant.
 MSG_NO_TO_CONFIRM=Nessuna dato trovato
+advice = Avvertenza
+advice_msg = Necessario Prob Mod Sched
