--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
@@ -1,5 +1,5 @@
-title=Scheduling agreement - Confirmation 
-appTitle=Scheduling agreement - Confirmation
+title=Confirmation Approve
+appTitle=Confirmation Approve
 appDescription=
  
 #XTXT: 
@@ -181,9 +181,11 @@ AddNota=Add note (optional)
 
 AddNota=Add note (optional)
 dataConferma=Delta confirm
-quantitaConferma=Qant confirm
+quantitaConferma=Quant confirm
 dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
 deltaGG=Delta Day
 deltaQuantita=Delta Quant.
 MSG_NO_TO_CONFIRM=No data found
+advice = Advice
+advice_msg = Need Prob Mod Sched
