--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
@@ -150,10 +150,10 @@ deltaQuant=Delta quantit\u00E0
 percDiffProgr=% differenza progressivo
  
 #XFLD: 
-approva=Approva
+approva=Approve
  
 #XFLD: 
-rifiuta=Rifiuta
+rifiuta=Reject
 
 positionConfirmation = Approve / Reject
 
@@ -180,12 +180,12 @@ MSG_Confirm_Reject_Text = Do you want to conirm this operation?
 AddNota=Add note (optional)
 
 AddNota=Add note (optional)
-dataConferma=Delta confirm
-quantitaConferma=Quant confirm
-dataRichiesta=Data richiesta
-quantitaRichiesta=Quant richiesta
+dataConferma=Date confirm
+quantitaConferma=Qty confirm
+dataRichiesta=Date Requested
+quantitaRichiesta=Qty Requested
 deltaGG=Delta Day
-deltaQuantita=Delta Quant.
+deltaQuantita=Delta Qty
 MSG_NO_TO_CONFIRM=No data found
 advice = Advice
 advice_msg = Need Prob Mod Sched
