--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -127,7 +127,7 @@ confirmations = Confirmations
 status = Status
  
 #XFLD: 
-approveReject=Approva/Rifiuta
+approveReject=Approve/Reject
 
 #XFLD: 
 qtaRichiesta=Quantit\u00E0 richiesta
@@ -151,10 +151,10 @@ deltaQuant=Delta quantit\u00E0
 percDiffProgr=% differenza progressivo
  
 #XFLD: 
-approva=Approva
+approva=Approve
  
 #XFLD: 
-rifiuta=Rifiuta
+rifiuta=Reject
 
 positionConfirmation = Approve / Reject
 
@@ -179,13 +179,12 @@ NAME1=Supplier Name
 MSG_Confirm_Reject_Text = Do you want to confirm this operation?
 
 AddNota=Add note (optional)
-dataConferma=Delta confirm
-quantitaConferma=Quant confirm
-dataRichiesta=Data richiesta
-quantitaRichiesta=Quant richiesta
+dataConferma=Date confirm
+quantitaConferma=Qty confirm
+dataRichiesta=Date Requested
+quantitaRichiesta=Qty Requested
 deltaGG=Delta Day
-deltaQuantita=Delta Quant.
+deltaQuantita=Delta Qty
 MSG_NO_TO_CONFIRM=No data found
-
 advice = Advice
 advice_msg = Need Prob Mod Sched
