--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -180,7 +180,7 @@ MSG_Confirm_Reject_Text = Sei sicuro di voler confermare/rifiutare le posizioni 
 
 AddNota=Aggiungi nota per il rifiuto (non obbligatoria)
 
-dataConferma=Delta conferma
+dataConferma=Data conferma
 quantitaConferma=Quant conferma
 dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
