SCHE AGREE: percentuali quantita

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -405,3 +405,4 @@ ERR_no_schedulations=Non sono state inserite schedulazioni
 MSG_Confirm_Text=Sei sicuro di voler confermare le modifiche ?
 
 MENGE_RELEASE=Quantit\u00E0 rilasciata
+FROZEN=Frizzato
