--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -412,3 +412,4 @@ ERR_no_schedulations=No schedulations found
 MSG_Confirm_Text=Are you sure you want to confirm?
 
 MENGE_RELEASE=Quantity release
+FROZEN=Frozen
