SCHED AGREE: limiti tolleranze quantità

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -406,3 +406,6 @@ MSG_Confirm_Text=Sei sicuro di voler confermare le modifiche ?
 
 MENGE_RELEASE=Quantit\u00E0 rilasciata
 FROZEN=Frizzato
+
+HeaderTexts = Testi
+noTextsFound = Nessun testo trovato per l'ordine selezionato
