--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -414,3 +414,6 @@ MSG_Confirm_Text=Are you sure you want to confirm?
 MENGE_RELEASE=Quantity release
 
 FROZEN=Frozen
+
+HeaderTexts = Texts
+noTextsFound = No Texts Found
