SCHED AGREE: gestione testi

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -417,3 +417,9 @@ FROZEN=Frozen
 
 HeaderTexts = Texts
 noTextsFound = No Texts Found
+TESTO=Text
+ID=ID
+DESCRIPTION=Description
+COMMENT=Comment
+Header = Header
+Positions = Positions
