--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -409,3 +409,9 @@ FROZEN=Frizzato
 
 HeaderTexts = Testi
 noTextsFound = Nessun testo trovato per l'ordine selezionato
+TESTO=Testo
+ID=ID
+DESCRIPTION=Descrizione
+COMMENT=Commento
+Header = Testata
+Positions = Posizioni
