--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/18n_en.properties
@@ -189,3 +189,5 @@ deltaQuantita=Delta Qty
 MSG_NO_TO_CONFIRM=No data found
 advice = Advice
 advice_msg = Need Prob Mod Sched
+ZINVALIDITA=Start dt
+ZFINVALIDATA=End dt
