--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -189,3 +189,5 @@ deltaQuantita=Delta Quant.
 MSG_NO_TO_CONFIRM=Nessuna dato trovato
 advice = Avvertenza
 advice_msg = Necessario Prob Mod Sched
+ZINVALIDITA=Init valid
+ZFINVALIDATA=Fin valid
