--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -188,3 +188,5 @@ deltaQuantita=Delta Qty
 MSG_NO_TO_CONFIRM=No data found
 advice = Advice
 advice_msg = Need Prob Mod Sched
+ZINVALIDITA=Start dt
+ZFINVALIDATA=End dt
