PURCH ORDS: implementazione

--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -1,5 +1,5 @@
-title=Purchase Orders
-appTitle=Purchase Orders
+title=Purchase orders
+appTitle=Purchase orders
 appDescription=
 
 supplierOrdersHeader = Supplier Orders Headers
@@ -412,3 +412,16 @@ ERR_no_schedulations=No schedulations found
 MSG_Confirm_Text=Are you sure you want to confirm?
 
 MENGE_RELEASE=Quantity release
+
+FROZEN=Frozen
+
+HeaderTexts = Texts
+noTextsFound = No Texts Found
+TESTO=Text
+ID=ID
+DESCRIPTION=Description
+COMMENT=Comment
+Header = Header
+Positions = Positions
+PLANT_DESCR = Plant/Description
+SaveAndClose=Save and Close
