--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
@@ -1,8 +1,8 @@
-title=Ordini d'Acquisto
-appTitle=Ordini d'Acquisto
+title=Ordini chiusi
+appTitle=Ordini chiusi
 appDescription=
 
-supplierOrdersHeader = Testata Ordini d'Acquisto Fornitore
+supplierOrdersHeader = Testata Piani di Consegna Fornitore
 address = Indirizzo 
 officePhone = Telefono Ufficio
 email = Email
@@ -405,3 +405,15 @@ ERR_no_schedulations=Non sono state inserite schedulazioni
 MSG_Confirm_Text=Sei sicuro di voler confermare le modifiche ?
 
 MENGE_RELEASE=Quantit\u00E0 rilasciata
+FROZEN=Frizzato
+
+HeaderTexts = Testi
+noTextsFound = Nessun testo trovato per l'ordine selezionato
+TESTO=Testo
+ID=ID
+DESCRIPTION=Descrizione
+COMMENT=Commento
+Header = Testata
+Positions = Posizioni
+PLANT_DESCR = Plant/Descrizione
+SaveAndClose=Salva e chiudi
