--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_it.properties
@@ -1,3 +1,81 @@
-title=Customizing
-appTitle=Customizing
+title=Portal Customizing
+appTitle=Portal Customizing
 appDescription=
+
+BUYERS=Buyers
+PLANTS=Plants
+USERID=User ID
+SYSID=System ID
+PURCH_ORG=Purchase Org.
+PURCH_DESCR=Descrizione Purchase Org.
+BU=Businnes Unit
+METAID=MetaId
+ 
+#YTXT: 
+DESCR=Description
+ 
+#YTXT: 
+LIFNR=Supplier
+ 
+#YTXT: 
+PLANT=Plant
+
+PROFILO_CONTROLLO=Profilo Controllo
+CAT_CONFERMA=Categoria Conferma
+DESCRIZIONE=Descrizione
+OWNER=Owner
+TIPO_CONFERMA=Tipo Conferma
+MODIFICA_PREZZO=Modifica Prezzo
+PERC_INFERIORE=Percentuale Inferiore Prz.
+PERC_SUPERIORE=Percentuale Superiore Prz.
+PARZIALE_QUANTITA=Inserire una quantità parziale
+PERC_INFERIORE_QUANT=Percentuale Inferiore Qta
+PERC_SUPERIORE_QUANT=Percentuale Superiore Qta
+MODIFICA_QUANTITA=Modifica Quantità
+TIPO_COND_PREZZO=Tipo Cond. Prezzo
+TIPO_CONSEGNA_INB=Tipo Consegna Inb.
+LOTTO_FORNITORE_INB=Lotto Fornit. Inb.
+DATA_SCADENZA_INB=Data Scardenza Inb.
+DATA_PRODUZIONE_INB=Data Produzione Inb.
+NUMERO_SERIALE_INB=Num. Seriale Inb.
+CONFERMA_MANDATORY=Conferma Buyer
+TIPO_AVVISO=Tipo Avviso
+IN_PROCESS=In corso
+COMPLETED=Completo
+DIFETTI=Difetti
+P_DIFETTI=Pos. Difetti
+CAUSE=Cause
+P_CAUSE=Pos. Cause
+MISURE=Misure
+P_MISURE=Pos. Misure
+INTERVENTI=Interventi
+P_INTERVENTI = Pos.Interventi
+RANGE_PERC=Range Percentuale
+SCOSTAMENTO_GG=Giorni di Scostamento
+CRITICITA=Criticità
+CONTROLLO_CORSO_APP=Inibire Controllo Univocità
+TIPO_MSG=Tipo Messaggio
+APPLICAZIONE=Applicazione
+
+BSTYP=Categria Documento
+BSART=Tipo Documento
+LISTA_ODA=Lista OdA
+LISTA_RESI=Lista Reso
+LISTA_RFQ=Lista RFQ
+PLANNING=Planning
+MESSAGE_TYPE=Tipo Messaggio
+APPLICATION=Applicazione
+
+
+ 
+#XFLD: 
+FLUSSO=Flusso
+ 
+#XFLD: 
+TIPO_STRUTTURA=Tipo Struttura
+ 
+#XFLD: 
+EVENTO=Evento
+ 
+#XFLD: 
+DIREZIONE=Direzione
