--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_it.properties
@@ -79,3 +79,11 @@ EVENTO=Evento
  
 #XFLD: 
 DIREZIONE=Direzione
+
+TIME_DEPENDENT=Time Dependernt
+GG_ESTRAZIONE=Giorni Estrazione
+PROGRESSIVI=Progressivi
+ZAPPPERSUP=Percentuale Superiore
+ZAPPPERINF=Percfentuale Inferiore
+ZAPPGGSUP=Num. giorni Superiore
+ZAPPGGINF=Num. giorni Inferiore
