--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
@@ -79,3 +79,11 @@ EVENTO=Evento
  
 #XFLD: 
 DIREZIONE=Direzione
+
+TIME_DEPENDENT=Time Dependernt
+GG_ESTRAZIONE=Days Extraction
+PROGRESSIVI=Progressive
+ZAPPPERSUP=Higher percentage
+ZAPPPERINF=Lower Percentage
+ZAPPGGSUP=Higher Num. Days
+ZAPPGGINF=Lower Num. Days
