--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
@@ -7,7 +7,7 @@ address = Indirizzo
 officePhone = Telefono Ufficio
 email = Email
 orders = Ordini
-orderNumber = Numero d'ordine
+orderNumber = Numero d\u00B4ordine
 PtConditionCode = Cond.Pagamento
 paymentConditionDescr = Descr.cond.Pagamento
 supplier = Fornitore
@@ -253,7 +253,7 @@ MNG02=Quantit\u00E0 confermata
 loading=Caricamento in corso
  
 #XTXT: 
-EBELN=Doc. d'acquisto
+EBELN=Doc. d\u00B4acquisto
  
 #XTXT: 
 ETENS=Num. conferma Fornitore
@@ -289,7 +289,7 @@ Confirm=Conferma
 ERR_Selection_Row=Seleziona una o più posizioni.
 ERR_Confirm_Position_Text =Il numero del documento di riferimento è obbligatorio
 ERR_Schedulations_Mandatory = Compilare tutti i campi a video
-ERR_Schedulations_Menge_0 = Quantita' conferma a zero non permessa
+ERR_Schedulations_Menge_0 = Quantit\u00E0 conferma a zero non permessa
 ERR_Confirmation_Type_Mandatory = Il tipo conferma è obbligatorio per posizione {0}
 ERR_Confirmation_Type_Mandatory_Single = Il tipo conferma è obbligatorio
 ERR_Sum_Schedulations = La somma della quantit\u00E0 di Schedulazioni per la posizione {0} supera la quantit\u00E0 totale di posizione
@@ -323,7 +323,7 @@ quantity=Quantit\u00E0
 confirmAndClose=Conferma e Chiudi
  
 #XTXT: 
-orderConfirmation=AB - Conferma del destinatario dell'ordine
+orderConfirmation=AB - Conferma del destinatario dell\u00B4ordine
  
 #XTXT: 
 TOT=Totale
@@ -408,7 +408,7 @@ MENGE_RELEASE=Quantit\u00E0 rilasciata
 FROZEN=Frizzato
 
 HeaderTexts = Testi
-noTextsFound = Nessun testo trovato per l'ordine selezionato
+noTextsFound = Nessun testo trovato per l\u00B4ordine selezionato
 TESTO=Testo
 ID=ID
 DESCRIPTION=Descrizione
