--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -3,7 +3,7 @@ appTitle=Conferma approvazione
 appDescription=
  
 #XTXT: 
-EBELN=Doc. d'acquisto
+EBELN=Doc. d\u00B4acquisto
  
 #XTXT: 
 EBELP=Posizione
@@ -30,7 +30,7 @@ EBTYP=Cat.Conf.
 MATNR=Materiale
  
 #XTIT: 
-titleModOds=Richiesta di modifica dell'ordine
+titleModOds=Richiesta di modifica dell\u00B4ordine
  
 #XTXT: 
 TXZ01=Descrizione Materiale
