--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
@@ -24,7 +24,7 @@ searchOrders = Search Orders
 
 correctConfirmDeliveries = Deliveries correctly elaborated. Delivery generated number: {0}. Print created HU ?
 positionNotConfirmable = Positions {0} are not confirmable
-allPositionNotConfirmable = All selected order positions can't be confirmed
+allPositionNotConfirmable = All selected order positions can\u00B4t be confirmed
  
 #MESSAGES:
 noOrderFound = No orders found
