--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
@@ -296,7 +296,7 @@ ERR_Price_Perc_Up = Il prezzo della posizione {0} eccede la percentuale superior
 ERR_Price_Perc_Down =  Il prezzo della posizione {0} eccede la percentuale inferiore di deviazione
 ERR_Empty_Deliveries = Aggiungi spedizioni alla posizione {0}
 
-MSG_Confirm_Position_Text=E' sicuro di voler confermare le seguenti schedulazioni?
+MSG_Confirm_Position_Text=E\u00B4 sicuro di voler confermare le seguenti schedulazioni?
 #XTXT: 
 confirmationType=Tipo conferma
  
