--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
@@ -46,10 +46,10 @@ errorCreatingMetasupplierContact=Errore durante la creazione del contatto
 saveContact=Salva
 resetContact=Reset
 metasupplierContactUpdated=Contatto aggiornato
-errorUpdateingMetasupplierContact=Errore durante l'aggiornamento del contatto
+errorUpdateingMetasupplierContact=Errore durante l\u00B4aggiornamento del contatto
 confirmDeletion=Confermi di voler eliminare il contatto?
 metasupplierContactDeleted=Contatto eliminato
-errorDeletingMetasupplierContact=Errore durante l'eliminazione del contatto
+errorDeletingMetasupplierContact=Errore durante l\u00B4eliminazione del contatto
 selectContactType=Seleziona la tipologia del contatto
 titleForm=Titolo
 name=Nome
@@ -57,7 +57,7 @@ Name=Nome
 surname=Cognome
 Surname=Cognome
 Supplier=Codice Fornitore
-noMetasupplierFoundForUser=Nessun metasupplier trovato per l'utente corrente
+noMetasupplierFoundForUser=Nessun metasupplier trovato per l\u00B4utente corrente
 BU=Businnes Unit
 DeleteMetasupplierRow=Sei sicuro di voler cancellare il Fornitore selezionato?
 BC=Metasupplier Management
